--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ INCLUDE( ilcsoft_default_settings )
 
 FIND_PACKAGE( Marlin 1.0 REQUIRED )
 FIND_PACKAGE( FastJet REQUIRED )
-FIND_PACKAGE( ROOT REQUIRED )
+FIND_PACKAGE( ROOT REQUIRED COMPONENTS TMVA)
 
 FOREACH( pkg Marlin FastJet ROOT )
     IF( ${pkg}_FOUND )
