--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,18 +15,22 @@ SET( ${PROJECT_NAME}_VERSION_MINOR 1 )
 SET( ${PROJECT_NAME}_VERSION_PATCH 0 )
 
 
+LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake )
 
 ### DEPENDENCIES ############################################################
 
 FIND_PACKAGE( ILCUTIL COMPONENTS ILCSOFT_CMAKE_MODULES REQUIRED )
-
 # load default settings from ILCSOFT_CMAKE_MODULES
 INCLUDE( ilcsoft_default_settings )
+
+FIND_PACKAGE( Eigen3 REQUIRED )
+INCLUDE_DIRECTORIES( SYSTEM ${EIGEN3_INCLUDE_DIR} )
+LIST( APPEND ${PROJECT_NAME}_DEPENDS_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR} )
 
 
 FIND_PACKAGE( Marlin 1.0 REQUIRED )
 FIND_PACKAGE( FastJet REQUIRED )
-FIND_PACKAGE( ROOT REQUIRED COMPONENTS TMVA)
+FIND_PACKAGE( ROOT REQUIRED COMPONENTS TMVA )
 
 FOREACH( pkg Marlin FastJet ROOT )
     IF( ${pkg}_FOUND )
@@ -36,12 +40,6 @@ FOREACH( pkg Marlin FastJet ROOT )
     ENDIF()
 ENDFOREACH()
 
-### DOCUMENTATION ###########################################################
-
-OPTION( INSTALL_DOC "Set to OFF to skip build/install Documentation" ON )
-IF( INSTALL_DOC AND EXISTS "${PROJECT_SOURCE_DIR}/doc/CMakeLists.txt" )
-    ADD_SUBDIRECTORY( ./doc )
-ENDIF()
 
 
 ### LIBRARY #################################################################
