add Minimisation files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ LIST( APPEND ${PROJECT_NAME}_DEPENDS_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR} )
 
 FIND_PACKAGE( Marlin 1.0 REQUIRED )
 FIND_PACKAGE( FastJet REQUIRED )
-FIND_PACKAGE( ROOT REQUIRED COMPONENTS TMVA )
+FIND_PACKAGE( ROOT 6.08 REQUIRED COMPONENTS TMVA XMLIO Minuit MLP MathMore MathCore Minuit2 RooFit RooFitCore)
 
 FOREACH( pkg Marlin FastJet ROOT )
     IF( ${pkg}_FOUND )
@@ -60,6 +60,7 @@ file(GLOB_RECURSE headers ${PROJECT_SOURCE_DIR}/include/*.h)
 
 #add library
 add_library( ${PROJECT_NAME} SHARED ${sources} ${headers} )
+target_link_libraries( ${PROJECT_NAME} ${ROOT_COMPONENT_LIBRARIES} )
 install( TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib )
 
 ADD_SUBDIRECTORY( ./Analysis )
